test/tests/operators/from_mysql/error_tls_invalid_keyfile.txt
error: `tls.keyfile` path is not a valid file: /nonexistent/path/client-key.pem
  --> tests/operators/from_mysql/error_tls_invalid_keyfile.tql:12:16
   |
12 |            tls={keyfile: "/nonexistent/path/client-key.pem"}
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
